# c-WeatherCli

./: CMakeLists.txt  CMakePresets.json  README.md
include/: main.h  weather.h
src/: main.cpp  weather.cpp
